name: DistanceLSH
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: array -any, base -any, containers -any,
               directory -any, filemanip -any, process -any, random -any,
               random-shuffle -any, regex-compat -any, vector -any
stability:
homepage: https://github.com/emchristiansen/DistanceLSH
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: DistanceLSH
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Base BenchmarkUtil IOUtil LSH RandomUtil Util
ghc-prof-options:
ghc-shared-options:
ghc-options: -O2 -Wall
hugs-options:
nhc98-options:
jhc-options: